--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,7 +21,8 @@
     "prettier": "^2.7.1",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.30.0",
-    "sequelize-typescript": "^2.1.5"
+    "sequelize-typescript": "^2.1.5",
+    "serialize-javascript": "^6.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
